# fast-lottery-engine

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  redis-v2-architecture.excalidraw  requests.http
blogs/: day1.md  day2.md  day4.md
migrations/: 0001_init.sql  0002_demo_seed.sql
specs/: draw-flow.excalidraw  redis-v2-architecture.excalidraw  system-architecture.excalidraw  system-flow-complete.excalidraw  system-flow-simple.excalidraw  system-flow.excalidraw  system-flow.md  v1-specs.md
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  redis_client.rs  redis_scripts.rs
src/routes/: mod.rs  routes_admin.rs  routes_auth.rs  routes_lottery.rs  routes_user.rs
src/services/: activity_service.rs  lottery_service.rs  mod.rs  prize_cache.rs  prize_service.rs  stock_sync.rs  user_service.rs
tests/: api_integration.rs  db_tests.rs  perf_lottery.rs  service_draw_test.rs
