 [package]
 name = "fast-lottery-engine"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower-http = { version = "0.5", features = ["trace", "cors"] }
 jsonwebtoken = "9"
 argon2 = "0.5"
 rand = "0.8"
 thiserror = "1"
 once_cell = "1"
anyhow = "1"
